--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -16,22 +16,47 @@
   font-size: 18px;
   font-weight: 500;
   border-radius: 5px;
-  transition: all 0.2s ease;
+  transition: all 0.2s ease-in-out;
   border: 1px solid transparent;
 }
 
-.link:first-child {
+.articlesLink {
   margin-right: auto;
 }
 
-.link:last-child {
+.createArticleLink {
+  color: #52C41A !important;
+  border: 1px solid #52C41A;
+  margin-right: 15px;
+}
+
+.editProfileLink {
+  display: flex !important;
+  align-items: center;
+  padding: 5px 15px;
+  gap: 10px;
+  margin-right: 15px;
+}
+
+.logOutLink {
+  border: 1px solid #2b2b2b;
+}
+
+.signUpLink {
   margin-left: 25px;
   color: #52C41A;
   border-color: #52C41A;
 }
 
 .link:hover {
-  color: #2b2b2b;
+  color: #2b2b2b !important;
   background-color: lightgray;
   border-color: lightgray;
+}
+
+.userAvatar {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  object-fit: cover;
 }
