--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
   src: url('./assets/fonts/Inter-Regular.ttf') format(truetype);
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url('./assets/fonts/Inter-Medium.ttf') format(truetype);
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url('./assets/fonts/Inter-SemiBold.ttf') format(truetype);
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
   src: url('./assets/fonts/Inter-Bold.ttf') format(truetype);
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 html {
