--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -117,3 +117,55 @@
 .articleBody {
   overflow-wrap: break-word;
 }
+
+
+.likeBtn {
+  padding-left: 20px;
+}
+
+/* для элемента input c type="checkbox" */
+.likeBtn>input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+/* для элемента label, связанного с .custom-checkbox */
+.likeBtn>span {
+  display: inline-flex;
+  position: relative;
+  align-items: center;
+  user-select: none;
+}
+
+/* создание в label псевдоэлемента before со следующими стилями */
+.likeBtn>span::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -20px;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-image: url('../../assets/image/like.svg');
+}
+
+/* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
+.likeBtn>input:focus:not(:checked)+span::before {
+  border-color: #80bdff;
+}
+
+/* стили для чекбокса, находящегося в состоянии checked */
+.likeBtn>input:checked+span::before {
+  background-image: url('../../assets/image/like-active.svg');
+}
+
+/* стили для чекбокса, находящегося в состоянии disabled */
+.likeBtn>input:disabled+span::before {
+  background-image: url('../../assets/image/like.svg');
+}
