feat: added spinners while waiting for account login or registration

--- a/src/components/EditProfileForm/EditProfileForm.module.scss
+++ b/src/components/EditProfileForm/EditProfileForm.module.scss
@@ -77,7 +77,7 @@
 
 .inputSubmit[type='submit']:hover {
   color: #000;
-  background-color: lightgray;
+  background-color: #188fffbf;
 }
 
 .linkSignIn {
