--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -77,7 +77,7 @@
 
 .inputSubmit[type='submit']:hover {
   color: #000;
-  background-color: lightgray;
+  background-color: #188fffbf;
 }
 
 .linkSignIn {
