--- a/src/components/EditArticleForm/EditArticleForm.module.scss
+++ b/src/components/EditArticleForm/EditArticleForm.module.scss
@@ -1,5 +1,5 @@
 .formContainer {
-  width: 30%;
+  width: 100%;
   min-width: 300px;
   padding: 25px;
   background-color: #fff;
@@ -7,7 +7,7 @@
   border-radius: 5px;
 }
 
-.editProfileForm {
+.newArticleForm {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -27,12 +27,6 @@
   margin-bottom: 10px;
 }
 
-.labelCheckbox {
-  display: flex;
-  position: relative;
-  font-size: 14px;
-}
-
 .inputLabelText {
   font-size: 14px;
   margin-bottom: 5px;
@@ -43,6 +37,12 @@
   color: #F5222D;
 }
 
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .input {
   border: 1px solid #D9D9D9;
   border-radius: 5px;
@@ -50,29 +50,24 @@
   padding: 0 10px;
 }
 
-.inputCheckbox {
-  min-width: 15px;
-  min-height: 15px;
-  position: absolute;
-  top: 3.5px;
-}
-
-.inputCheckboxText {
-  color: #595959;
-  margin-left: 22px;
-  line-height: 22px;
-  font-size: 14px;
+.textArea {
+  min-height: 150px;
+  resize: none;
+  border: 1px solid #D9D9D9;
+  border-radius: 5px;
+  height: 40px;
+  padding: 10px;
 }
 
 .inputSubmit[type='submit'] {
-  width: 100%;
+  width: 33.7%;
+  align-self: flex-start;
   height: 40px;
   background-color: #1890FF;
   border-radius: 5px;
   color: #fff;
-  margin-top: 10px;
   margin-bottom: 10px;
-  transition: all 0.2s ease;
+  transition: all 0.15s ease;
 }
 
 .inputSubmit[type='submit']:hover {
@@ -80,10 +75,36 @@
   background-color: #188fffbf;
 }
 
-.inputSubmit[type='submit']:disabled {
-  color: #000;
-  background-color: lightgray;
+.tagsContainer {
+  align-self: flex-start;
+  display: flex;
+  align-items: flex-end;
+  gap: 15px;
 }
+
+.tag {
+  margin-bottom: 15px;
+  display: flex;
+  align-items: flex-start;
+  gap: 15px;
+}
+
+.addTagBtn {
+  color: #1890FF;
+  border: 1px solid #1890FF;
+  border-radius: 5px;
+  padding: 10px 30px;
+  margin-bottom: 15px;
+}
+
+.deleteTagBtn {
+  color: #F5222D;
+  border: 1px solid #F5222D;
+  border-radius: 5px;
+  padding: 10px 30px;
+}
+
+// pizda
 
 .linkSignIn {
   color: #8C8C8C;
@@ -94,10 +115,4 @@
 .link:visited,
 .link:link {
   color: #1890FF;
-}
-
-.checkImg {
-  width: 0;
-  height: 0;
-  display: none;
 }
