--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -117,6 +117,7 @@
   border: 1px solid #F5222D;
   border-radius: 5px;
   padding: 8px 15px;
+  transition: all 0.2s ease-in-out;
 }
 
 .btnEdit {
@@ -124,6 +125,14 @@
   border: 1px solid #52C41A;
   border-radius: 5px;
   padding: 8px 15px;
+  transition: all 0.15s ease-in-out;
+}
+
+.btnDelete:hover,
+.btnEdit:hover {
+  color: #2b2b2b !important;
+  background-color: lightgray;
+  border-color: lightgray;
 }
 
 .userName {
@@ -200,9 +209,10 @@
 .deletePopup {
   width: 250px;
   position: absolute;
+  transform: translateX(-40px);
   background-color: #fff;
   box-shadow: 0px 2px 20px 10px rgba(0, 0, 0, 0.1);
-  padding: 10px 20px;
+  padding: 20px 30px;
   border-radius: 5px;
 }
 
@@ -216,11 +226,35 @@
   border-radius: 5px;
   margin-right: 15px;
   background-color: #fff;
+  transition: all 0.15s ease-in-out;
 }
 
 .btnYes {
   color: #fff;
   background-color: #1890FF;
+  border: 1px solid #1890FF;
   padding: 5px 10px;
+  border-radius: 5px;
+  transition: all 0.15s ease-in-out;
+}
+
+.btnNo:hover {
+  color: #F5222D !important;
+  background-color: #fff;
+  border-color: #F5222D;
+}
+
+.btnYes:hover {
+  color: #52C41A !important;
+  background-color: #fff;
+  border: 1px solid #52C41A;
+}
+
+.loaderContainer {
+  position: absolute;
+  transform: translateY(50px);
+  background-color: #fff;
+  padding: 30px 50px;
+  box-shadow: 0px 2px 20px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
 }
