--- a/src/components/EditArticleForm/EditArticleForm.module.scss
+++ b/src/components/EditArticleForm/EditArticleForm.module.scss
@@ -21,10 +21,11 @@
 }
 
 .label {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
 
 .inputLabelText {
@@ -33,6 +34,8 @@
 }
 
 .inputErrorText {
+  position: absolute;
+  bottom: -15px;
   font-size: 12px;
   color: #F5222D;
 }
@@ -83,7 +86,8 @@
 }
 
 .tag {
-  margin-bottom: 15px;
+  position: relative;
+  margin-bottom: 25px;
   display: flex;
   align-items: flex-start;
   gap: 15px;
@@ -94,7 +98,7 @@
   border: 1px solid #1890FF;
   border-radius: 5px;
   padding: 10px 30px;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
 }
 
 .deleteTagBtn {
@@ -104,7 +108,6 @@
   padding: 10px 30px;
 }
 
-// pizda
 
 .linkSignIn {
   color: #8C8C8C;
@@ -115,4 +118,13 @@
 .link:visited,
 .link:link {
   color: #1890FF;
+}
+
+.loaderContainer {
+  position: absolute;
+  transform: translateY(200px);
+  background-color: #fff;
+  padding: 50px 100px;
+  box-shadow: 0px 2px 20px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
