--- a/src/components/EditProfileForm/EditProfileForm.module.scss
+++ b/src/components/EditProfileForm/EditProfileForm.module.scss
@@ -22,9 +22,10 @@
 
 .label {
   width: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 .labelCheckbox {
@@ -41,6 +42,8 @@
 .inputErrorText {
   font-size: 12px;
   color: #F5222D;
+  position: absolute;
+  transform: translateY(62px);
 }
 
 .input {
@@ -100,4 +103,13 @@
   width: 0;
   height: 0;
   display: none;
+}
+
+.loaderContainer {
+  position: absolute;
+  transform: translateY(50px);
+  background-color: #fff;
+  padding: 30px 50px;
+  box-shadow: 0px 2px 20px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
