--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -90,3 +90,12 @@
 .link:link {
   color: #1890FF;
 }
+
+.loaderContainer {
+  position: absolute;
+  transform: translateY(50px);
+  background-color: #fff;
+  padding: 30px 50px;
+  box-shadow: 0px 2px 20px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
