--- a/src/components/EditArticleForm/EditArticleForm.module.scss
+++ b/src/components/EditArticleForm/EditArticleForm.module.scss
@@ -51,6 +51,11 @@
   border-radius: 5px;
   height: 40px;
   padding: 0 10px;
+  transition: all 0.15s ease;
+}
+
+.input:focus {
+  box-shadow: 0 0 0 1.3px #000;
 }
 
 .textArea {
@@ -60,6 +65,11 @@
   border-radius: 5px;
   height: 40px;
   padding: 10px;
+  transition: all 0.15s ease;
+}
+
+.textArea:focus {
+  box-shadow: 0 0 0 1.3px #000;
 }
 
 .inputSubmit[type='submit'] {
@@ -76,6 +86,10 @@
 .inputSubmit[type='submit']:hover {
   color: #000;
   background-color: #188fffbf;
+}
+
+.inputSubmit[type='submit']:focus {
+  box-shadow: 0 0 0 1.3px #000;
 }
 
 .tagsContainer {
@@ -99,6 +113,11 @@
   border-radius: 5px;
   padding: 10px 30px;
   margin-bottom: 25px;
+  transition: all 0.15s ease;
+}
+
+.addTagBtn:focus {
+  box-shadow: 0 0 0 1.3px #1890FF;
 }
 
 .deleteTagBtn {
@@ -106,6 +125,11 @@
   border: 1px solid #F5222D;
   border-radius: 5px;
   padding: 10px 30px;
+  transition: all 0.15s ease;
+}
+
+.deleteTagBtn:focus {
+  box-shadow: 0 0 0 1.3px #F5222D;
 }
 
 
