--- a/src/components/EditProfileForm/EditProfileForm.module.scss
+++ b/src/components/EditProfileForm/EditProfileForm.module.scss
@@ -51,6 +51,11 @@
   border-radius: 5px;
   height: 40px;
   padding: 0 10px;
+  transition: all 0.15s ease;
+}
+
+.input:focus {
+  box-shadow: 0 0 0 1.3px #000;
 }
 
 .inputCheckbox {
@@ -81,6 +86,10 @@
 .inputSubmit[type='submit']:hover {
   color: #000;
   background-color: #188fffbf;
+}
+
+.inputSubmit[type='submit']:focus {
+  box-shadow: 0 0 0 1.3px #000;
 }
 
 .inputSubmit[type='submit']:disabled {
