--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -48,6 +48,11 @@
   border-radius: 5px;
   height: 40px;
   padding: 0 10px;
+  transition: all 0.15s ease;
+}
+
+.input:focus {
+  box-shadow: 0 0 0 1.3px #000;
 }
 
 .inputCheckbox {
@@ -55,6 +60,11 @@
   min-height: 15px;
   position: absolute;
   top: 3.5px;
+  transition: all 0.15s ease;
+}
+
+.inputCheckbox:focus {
+  box-shadow: inset 0 0 0 1.3px #000;
 }
 
 .inputCheckboxText {
@@ -78,6 +88,10 @@
 .inputSubmit[type='submit']:hover {
   color: #000;
   background-color: #188fffbf;
+}
+
+.inputSubmit[type='submit']:focus {
+  box-shadow: 0 0 0 1.3px #000;
 }
 
 .linkSignIn {
