--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -4,7 +4,8 @@
   flex-direction: column;
   background-color: #fff;
   border-radius: 5px;
-  padding: 15px;
+  padding: 20px;
+  padding-bottom: 40px;
   margin-bottom: 25px;
   display: flex;
   min-height: 150px;
@@ -103,7 +104,7 @@
 
 .userInfoContainer {
   display: flex;
-  gap: 10px;
+  gap: 20px;
 }
 
 .buttonContainer {
@@ -145,10 +146,13 @@
 
 .userName {
   white-space: nowrap;
+  font-size: 20px;
 }
 
 .postDate {
   white-space: nowrap;
+  color: grey;
+  font-size: 14px;
 }
 
 .userAvatar {
@@ -156,6 +160,7 @@
   height: 45px;
   border-radius: 50%;
   object-fit: cover;
+  border: 1px solid lightgrey;
 }
 
 .articleBody {
