--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -11,6 +11,19 @@
   min-height: 150px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.15s linear;
+  animation: articleOpen 0.2s ease-in-out;
+}
+
+@keyframes articleOpen {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .article:hover {
@@ -228,11 +241,32 @@
 .deletePopup {
   width: 250px;
   position: absolute;
-  transform: translateX(-40px);
+  transform: translate(-40px, 10px);
   background-color: #fff;
   box-shadow: 0px 2px 20px 10px rgba(0, 0, 0, 0.1);
   padding: 20px 30px;
   border-radius: 5px;
+  animation: popupOpen 0.15s ease-in-out;
+}
+
+.deletePopup::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border: 12px solid transparent;
+  border-bottom: 12px solid #fff;
+  top: -22px;
+}
+
+@keyframes popupOpen {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 .popupText {
