--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -1,5 +1,18 @@
 .cardList {
   width: 100%;
+  animation: cardsOpen 0.2s ease-in-out;
+}
+
+@keyframes cardsOpen {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .pagination {
