--- a/src/components/EditProfileForm/EditProfileForm.module.scss
+++ b/src/components/EditProfileForm/EditProfileForm.module.scss
@@ -5,6 +5,19 @@
   background-color: #fff;
   margin-bottom: 25px;
   border-radius: 5px;
+  animation: formOpen 0.2s ease-in-out;
+}
+
+@keyframes formOpen {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .editProfileForm {
