--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -18,10 +18,17 @@
   border-radius: 5px;
   transition: all 0.2s ease-in-out;
   border: 1px solid transparent;
+  animation: linkOpen 0.2s ease-in-out;
 }
 
 .link:focus-visible {
   box-shadow: 0 0 0 1.3px #000;
+}
+
+.link:hover {
+  color: #2b2b2b !important;
+  background-color: lightgray;
+  border-color: lightgray;
 }
 
 .articlesLink {
@@ -62,16 +69,20 @@
   border: 1px solid #52C41A;
 }
 
-.link:hover {
-  color: #2b2b2b !important;
-  background-color: lightgray;
-  border-color: lightgray;
-}
-
 .userAvatar {
   width: 45px;
   height: 45px;
   border-radius: 50%;
   object-fit: cover;
   border: 1px solid lightgrey;
+}
+
+@keyframes linkOpen {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
