--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -319,3 +319,71 @@
   box-shadow: 0px 2px 20px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
 }
+
+
+// Разметка MD
+
+.articleBody {
+  p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+  }
+
+  blockquote {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 40px;
+    margin-inline-end: 40px;
+
+    p {
+      font-style: italic;
+    }
+  }
+
+  ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+  }
+
+  ul li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+    list-style: disc;
+  }
+
+  ol {
+    display: block;
+    list-style-type: decimal;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+  }
+
+  ol li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+  }
+
+  hr {
+    display: block;
+    unicode-bidi: isolate;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    overflow: hidden;
+    border-style: inset;
+    border-width: 1px;
+  }
+}
